namespaces/owncloud/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: owncloud

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: harbor.infra.edmee.cloud/docker/owncloud/server
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command: ["/usr/bin/healthcheck"]
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          exec:
            command: ["/usr/bin/healthcheck"]
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: files
          mountPath: /mnt/data
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: owncloud-files-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: harbor.infra.edmee.cloud/docker/library/mariadb:10.11
        ports:
        - containerPort: 3306
        args: ["--max-allowed-packet=128M", "--innodb-log-file-size=64M"]
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-u", "root", "--password=owncloud"]
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-u", "root", "--password=owncloud"]
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mariadb-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: harbor.infra.edmee.cloud/docker/library/redis:6
        ports:
        - containerPort: 6379
        args: ["--databases", "1"]
        livenessProbe:
          exec:
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: redis
          mountPath: /data
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: redis-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
spec:
  selector:
    app: owncloud
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: owncloud
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: owncloud
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-ingress
  namespace: owncloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-edmee-net
spec:
  tls:
  - secretName: owncloud-tls
    hosts:
    - owncloud.edmee.cloud
  ingressClassName: nginx
  rules:
  - host: owncloud.edmee.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owncloud
            port:
              number: 8080
